syntax = "proto3";

package proto;
option go_package = "./pb";

import "proto/basic_service.proto";

message CacheSetRequest {
  string key = 1;
  string value = 2;
  uint64 ttl = 3;
}

message CacheGetRequest {
  string key = 1;
  string default = 2;
}

message CacheRequest {
  string key = 1;
}

message CacheStatResponse {
  Status status = 1;
  string message = 2;
}

message CacheValueResponse {
  Status status = 1;
  string message = 2;
  string result = 3;
}

message CacheListResponse {
  Status status = 1;
  string message = 2;
  repeated string result = 3;
}
